tests/js/invalid/string/size-1.buri
size = "hello":size(1)